syntax = "proto3";

package farm.cow.login;
option go_package = "farm/cow/login";

message LoginReq {
    string uuid = 1;
    string passwd = 2;
}

enum Status {
    STATUS_OK = 0;
    STATUS_INVALID_PASSWD = 1;
    STATUS_INVALID_UUID = 2;
}

message LoginResp {
    Status status = 1;
    string token = 2;
}