syntax = "proto3";

package farm.cow.register;
option go_package = "farm/cow/register";

message RegisterReq {
    string born_at = 1;
    string uuid = 2;
    string passwd = 3;
    string parent = 4;
}

enum Status {
    STATUS_OK = 0;
    STATUS_ALREADY_REGISTERED = 1;
    STATUS_FAILED = 2;
}

message RegisterResp {
    Status status = 1;
    string uuid = 2;
    string token = 3;
}